# egi-notebooks-addons

./: README.md  requirements.txt  setup.cfg  setup.py
eginotebooks/: manager.py
