[metadata]
name = egi-notebooks-addons
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
summary = EGI Notebooks utilities
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    eginotebooks
